Show "Open With" menu items even for empty dirs

We found some legitimate use cases for this after all! :)

This reverts 14f0cd52f61de7539e2d9c751966594708ed0281

BUG: 427573
FIXED-IN: 5.12